MICELIO/generado/MicelioParser.py
# Generated from /home/antonio/Documents/MICELIO/MICELIO/gramatica/Micelio.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MicelioParser ( Parser ):

    grammarFileName = "Micelio.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'='", "'['", "']'", "'('", "')'", 
                     "'{'", "'}'", "':'", "'.'", "';'", "'var'", "'const'", 
                     "'funcion'", "'matriz'", "'regresa'", "'si'", "'sino_si'", 
                     "'sino'", "'segun'", "'caso'", "'defecto'", "'para'", 
                     "'hasta'", "'inc'", "'en'", "'mientras'", "'romper'", 
                     "'continuar'", "'leer'", "'imp'", "'importar'", "'como'", 
                     "'set'", "'dict'", "<INVALID>", "'nulo'", "'y'", "'o'", 
                     "'no'", "'in'", "'|>'", "'.*'", "'...'", "'++'", "'--'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "VAR", "CONST", "FUNCION", "MATRIZ", "REGRESA", "SI", 
                      "SINO_SI", "SINO", "SEGUN", "CASO", "DEFECTO", "PARA", 
                      "HASTA", "INC", "EN", "MIENTRAS", "ROMPER", "CONTINUAR", 
                      "LEER", "IMP", "IMPORTAR", "COMO", "SET", "DICT", 
                      "BOOL", "NULL", "Y", "O", "NO", "IN", "PIPE", "DOTMUL", 
                      "ELLIPSIS", "INC_OP", "DEC_OP", "PLUS", "MINUS", "MUL", 
                      "DIV", "MOD", "POW", "EQ", "NE", "LT", "LE", "GT", 
                      "GE", "NUMBER", "STRING", "ID", "COMMENT", "NEWLINE", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_simple_stmt = 2
    RULE_compound_stmt = 3
    RULE_var_decl = 4
    RULE_const_decl = 5
    RULE_assignment = 6
    RULE_assign_target = 7
    RULE_return_stmt = 8
    RULE_break_stmt = 9
    RULE_continue_stmt = 10
    RULE_import_stmt = 11
    RULE_leer_stmt = 12
    RULE_imp_stmt = 13
    RULE_if_stmt = 14
    RULE_switch_stmt = 15
    RULE_case_block = 16
    RULE_while_stmt = 17
    RULE_for_stmt = 18
    RULE_func_def = 19
    RULE_param_list = 20
    RULE_param_item = 21
    RULE_block = 22
    RULE_expr = 23
    RULE_listItem = 24
    RULE_postfixExpr = 25
    RULE_primary = 26
    RULE_postfixSuffix = 27
    RULE_keyValue = 28
    RULE_exprList = 29
    RULE_literal = 30
    RULE_sep = 31

    ruleNames =  [ "program", "statement", "simple_stmt", "compound_stmt", 
                   "var_decl", "const_decl", "assignment", "assign_target", 
                   "return_stmt", "break_stmt", "continue_stmt", "import_stmt", 
                   "leer_stmt", "imp_stmt", "if_stmt", "switch_stmt", "case_block", 
                   "while_stmt", "for_stmt", "func_def", "param_list", "param_item", 
                   "block", "expr", "listItem", "postfixExpr", "primary", 
                   "postfixSuffix", "keyValue", "exprList", "literal", "sep" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    VAR=12
    CONST=13
    FUNCION=14
    MATRIZ=15
    REGRESA=16
    SI=17
    SINO_SI=18
    SINO=19
    SEGUN=20
    CASO=21
    DEFECTO=22
    PARA=23
    HASTA=24
    INC=25
    EN=26
    MIENTRAS=27
    ROMPER=28
    CONTINUAR=29
    LEER=30
    IMP=31
    IMPORTAR=32
    COMO=33
    SET=34
    DICT=35
    BOOL=36
    NULL=37
    Y=38
    O=39
    NO=40
    IN=41
    PIPE=42
    DOTMUL=43
    ELLIPSIS=44
    INC_OP=45
    DEC_OP=46
    PLUS=47
    MINUS=48
    MUL=49
    DIV=50
    MOD=51
    POW=52
    EQ=53
    NE=54
    LT=55
    LE=56
    GT=57
    GE=58
    NUMBER=59
    STRING=60
    ID=61
    COMMENT=62
    NEWLINE=63
    WS=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MicelioParser.EOF, 0)

        def sep(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MicelioParser.SepContext)
            else:
                return self.getTypedRuleContext(MicelioParser.SepContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MicelioParser.StatementContext)
            else:
                return self.getTypedRuleContext(MicelioParser.StatementContext,i)


        def getRuleIndex(self):
            return MicelioParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MicelioParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11 or _la==63:
                self.state = 64
                self.sep()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4035613659892019368) != 0):
                self.state = 70
                self.statement()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11 or _la==63:
                    self.state = 71
                    self.sep()
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(MicelioParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MicelioParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.simple_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.compound_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MicelioParser.Var_declContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(MicelioParser.Const_declContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MicelioParser.AssignmentContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Return_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Continue_stmtContext,0)


        def import_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Import_stmtContext,0)


        def leer_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Leer_stmtContext,0)


        def imp_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Imp_stmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(MicelioParser.ExprContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = MicelioParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.const_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.assignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.return_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.break_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.continue_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 94
                self.import_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 95
                self.leer_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 96
                self.imp_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 97
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(MicelioParser.If_stmtContext,0)


        def switch_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Switch_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MicelioParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MicelioParser.For_stmtContext,0)


        def func_def(self):
            return self.getTypedRuleContext(MicelioParser.Func_defContext,0)


        def block(self):
            return self.getTypedRuleContext(MicelioParser.BlockContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_compound_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stmt" ):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stmt" ):
                listener.exitCompound_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_stmt" ):
                return visitor.visitCompound_stmt(self)
            else:
                return visitor.visitChildren(self)




    def compound_stmt(self):

        localctx = MicelioParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_compound_stmt)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.if_stmt()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.switch_stmt()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.while_stmt()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.for_stmt()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.func_def()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 105
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MicelioParser.VAR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MicelioParser.ID)
            else:
                return self.getToken(MicelioParser.ID, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MicelioParser.ExprContext)
            else:
                return self.getTypedRuleContext(MicelioParser.ExprContext,i)


        def getRuleIndex(self):
            return MicelioParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MicelioParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(MicelioParser.VAR)
            self.state = 109
            self.match(MicelioParser.ID)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 110
                self.match(MicelioParser.T__0)
                self.state = 111
                self.match(MicelioParser.ID)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 117
                self.match(MicelioParser.T__1)
                self.state = 118
                self.expr(0)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 119
                    self.match(MicelioParser.T__0)
                    self.state = 120
                    self.expr(0)
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MicelioParser.CONST, 0)

        def ID(self):
            return self.getToken(MicelioParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MicelioParser.ExprContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_const_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_decl" ):
                listener.enterConst_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_decl" ):
                listener.exitConst_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_decl" ):
                return visitor.visitConst_decl(self)
            else:
                return visitor.visitChildren(self)




    def const_decl(self):

        localctx = MicelioParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_const_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(MicelioParser.CONST)
            self.state = 129
            self.match(MicelioParser.ID)
            self.state = 130
            self.match(MicelioParser.T__1)
            self.state = 131
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_target(self):
            return self.getTypedRuleContext(MicelioParser.Assign_targetContext,0)


        def expr(self):
            return self.getTypedRuleContext(MicelioParser.ExprContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = MicelioParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.assign_target()
            self.state = 134
            self.match(MicelioParser.T__1)
            self.state = 135
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_targetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MicelioParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MicelioParser.ExprContext)
            else:
                return self.getTypedRuleContext(MicelioParser.ExprContext,i)


        def getRuleIndex(self):
            return MicelioParser.RULE_assign_target

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_target" ):
                listener.enterAssign_target(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_target" ):
                listener.exitAssign_target(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_target" ):
                return visitor.visitAssign_target(self)
            else:
                return visitor.visitChildren(self)




    def assign_target(self):

        localctx = MicelioParser.Assign_targetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assign_target)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(MicelioParser.ID)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 138
                self.match(MicelioParser.T__2)
                self.state = 139
                self.expr(0)
                self.state = 140
                self.match(MicelioParser.T__3)
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REGRESA(self):
            return self.getToken(MicelioParser.REGRESA, 0)

        def expr(self):
            return self.getTypedRuleContext(MicelioParser.ExprContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_return_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_stmt" ):
                listener.enterReturn_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_stmt" ):
                listener.exitReturn_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):

        localctx = MicelioParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(MicelioParser.REGRESA)
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 148
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Break_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROMPER(self):
            return self.getToken(MicelioParser.ROMPER, 0)

        def getRuleIndex(self):
            return MicelioParser.RULE_break_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak_stmt" ):
                listener.enterBreak_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak_stmt" ):
                listener.exitBreak_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak_stmt" ):
                return visitor.visitBreak_stmt(self)
            else:
                return visitor.visitChildren(self)




    def break_stmt(self):

        localctx = MicelioParser.Break_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_break_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(MicelioParser.ROMPER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Continue_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUAR(self):
            return self.getToken(MicelioParser.CONTINUAR, 0)

        def getRuleIndex(self):
            return MicelioParser.RULE_continue_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinue_stmt" ):
                listener.enterContinue_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinue_stmt" ):
                listener.exitContinue_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinue_stmt" ):
                return visitor.visitContinue_stmt(self)
            else:
                return visitor.visitChildren(self)




    def continue_stmt(self):

        localctx = MicelioParser.Continue_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_continue_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(MicelioParser.CONTINUAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORTAR(self):
            return self.getToken(MicelioParser.IMPORTAR, 0)

        def STRING(self):
            return self.getToken(MicelioParser.STRING, 0)

        def COMO(self):
            return self.getToken(MicelioParser.COMO, 0)

        def ID(self):
            return self.getToken(MicelioParser.ID, 0)

        def getRuleIndex(self):
            return MicelioParser.RULE_import_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_stmt" ):
                listener.enterImport_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_stmt" ):
                listener.exitImport_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_stmt" ):
                return visitor.visitImport_stmt(self)
            else:
                return visitor.visitChildren(self)




    def import_stmt(self):

        localctx = MicelioParser.Import_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_import_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(MicelioParser.IMPORTAR)
            self.state = 156
            self.match(MicelioParser.STRING)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 157
                self.match(MicelioParser.COMO)
                self.state = 158
                self.match(MicelioParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Leer_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEER(self):
            return self.getToken(MicelioParser.LEER, 0)
